--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ contextlib2==0.5.5
 coverage==4.4
 django-dbbackup==3.1.3
 django-nose==1.4.4
+django-redis-cache==1.7.1
 django-storages==1.5.2
 flake8==3.3.0
+hiredis==0.2.0
 mccabe==0.6.1
 nose==1.3.7
 packaging==16.8
