--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
 Django==2.1.7
+django-debug-toolbar-template-timings==0.9
+django-debug-toolbar==1.11
+django-environ==0.4.5
+psycopg2-binary==2.7.7
 pytz==2018.9
+sqlparse==0.2.4
