--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -8,3 +8,4 @@ services:
       - PYTHONUNBUFFERED=1
     ports:
       - "42040:8000"
+    command:  bash -c "sleep 10; python manage.py migrate --noinput; python manage.py runserver 0.0.0.0:8000"
