--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
 Django==2.1.7
+PyYAML==3.13
+cached-property==1.5.1
+certifi==2018.11.29
+chardet==3.0.4
 django-debug-toolbar-template-timings==0.9
 django-debug-toolbar==1.11
 django-environ==0.4.5
+docker-compose==1.23.2
+docker-pycreds==0.4.0
+docker==3.7.0
+dockerpty==0.4.1
+docopt==0.6.2
+idna==2.7
+jsonschema==2.6.0
 psycopg2-binary==2.7.7
 pytz==2018.9
+requests==2.20.1
+six==1.12.0
 sqlparse==0.2.4
+texttable==0.9.1
+urllib3==1.24.1
+websocket-client==0.54.0
